Fix page jumping when vertical scrollbar

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+html {
+  overflow-y: scroll;
+}
+
 body, html {
   margin: 0;
   padding: 0;
